syntax = "proto3";
package virtengine.fraud.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/fraud/v1";

// FraudReportStatus represents the state of a fraud report
enum FraudReportStatus {
  option (gogoproto.goproto_enum_prefix) = false;

  // FRAUD_REPORT_STATUS_UNSPECIFIED represents an unspecified status
  FRAUD_REPORT_STATUS_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "FraudReportStatusUnspecified"];

  // FRAUD_REPORT_STATUS_SUBMITTED indicates the report has been submitted and is awaiting review
  FRAUD_REPORT_STATUS_SUBMITTED = 1 [(gogoproto.enumvalue_customname) = "FraudReportStatusSubmitted"];

  // FRAUD_REPORT_STATUS_REVIEWING indicates a moderator is actively reviewing the report
  FRAUD_REPORT_STATUS_REVIEWING = 2 [(gogoproto.enumvalue_customname) = "FraudReportStatusReviewing"];

  // FRAUD_REPORT_STATUS_RESOLVED indicates the report has been resolved (action taken)
  FRAUD_REPORT_STATUS_RESOLVED = 3 [(gogoproto.enumvalue_customname) = "FraudReportStatusResolved"];

  // FRAUD_REPORT_STATUS_REJECTED indicates the report was rejected (no fraud found)
  FRAUD_REPORT_STATUS_REJECTED = 4 [(gogoproto.enumvalue_customname) = "FraudReportStatusRejected"];

  // FRAUD_REPORT_STATUS_ESCALATED indicates the report has been escalated to admin
  FRAUD_REPORT_STATUS_ESCALATED = 5 [(gogoproto.enumvalue_customname) = "FraudReportStatusEscalated"];
}

// FraudCategory represents the category of fraud being reported
enum FraudCategory {
  option (gogoproto.goproto_enum_prefix) = false;

  // FRAUD_CATEGORY_UNSPECIFIED represents an unspecified category
  FRAUD_CATEGORY_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "FraudCategoryUnspecified"];

  // FRAUD_CATEGORY_FAKE_IDENTITY indicates fake or stolen identity
  FRAUD_CATEGORY_FAKE_IDENTITY = 1 [(gogoproto.enumvalue_customname) = "FraudCategoryFakeIdentity"];

  // FRAUD_CATEGORY_PAYMENT_FRAUD indicates payment-related fraud
  FRAUD_CATEGORY_PAYMENT_FRAUD = 2 [(gogoproto.enumvalue_customname) = "FraudCategoryPaymentFraud"];

  // FRAUD_CATEGORY_SERVICE_MISREPRESENTATION indicates misrepresented services
  FRAUD_CATEGORY_SERVICE_MISREPRESENTATION = 3 [(gogoproto.enumvalue_customname) = "FraudCategoryServiceMisrepresentation"];

  // FRAUD_CATEGORY_RESOURCE_ABUSE indicates abuse of allocated resources
  FRAUD_CATEGORY_RESOURCE_ABUSE = 4 [(gogoproto.enumvalue_customname) = "FraudCategoryResourceAbuse"];

  // FRAUD_CATEGORY_SYBIL_ATTACK indicates suspected sybil attack
  FRAUD_CATEGORY_SYBIL_ATTACK = 5 [(gogoproto.enumvalue_customname) = "FraudCategorySybilAttack"];

  // FRAUD_CATEGORY_MALICIOUS_CONTENT indicates malicious content or software
  FRAUD_CATEGORY_MALICIOUS_CONTENT = 6 [(gogoproto.enumvalue_customname) = "FraudCategoryMaliciousContent"];

  // FRAUD_CATEGORY_TERMS_VIOLATION indicates terms of service violation
  FRAUD_CATEGORY_TERMS_VIOLATION = 7 [(gogoproto.enumvalue_customname) = "FraudCategoryTermsViolation"];

  // FRAUD_CATEGORY_OTHER indicates other fraud types
  FRAUD_CATEGORY_OTHER = 8 [(gogoproto.enumvalue_customname) = "FraudCategoryOther"];
}

// ResolutionType represents the type of resolution for a fraud report
enum ResolutionType {
  option (gogoproto.goproto_enum_prefix) = false;

  // RESOLUTION_TYPE_UNSPECIFIED represents no resolution yet
  RESOLUTION_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "ResolutionTypeUnspecified"];

  // RESOLUTION_TYPE_WARNING indicates a warning was issued
  RESOLUTION_TYPE_WARNING = 1 [(gogoproto.enumvalue_customname) = "ResolutionTypeWarning"];

  // RESOLUTION_TYPE_SUSPENSION indicates account suspension
  RESOLUTION_TYPE_SUSPENSION = 2 [(gogoproto.enumvalue_customname) = "ResolutionTypeSuspension"];

  // RESOLUTION_TYPE_TERMINATION indicates account termination
  RESOLUTION_TYPE_TERMINATION = 3 [(gogoproto.enumvalue_customname) = "ResolutionTypeTermination"];

  // RESOLUTION_TYPE_REFUND indicates a refund was processed
  RESOLUTION_TYPE_REFUND = 4 [(gogoproto.enumvalue_customname) = "ResolutionTypeRefund"];

  // RESOLUTION_TYPE_NO_ACTION indicates no action taken (rejected)
  RESOLUTION_TYPE_NO_ACTION = 5 [(gogoproto.enumvalue_customname) = "ResolutionTypeNoAction"];
}

// AuditAction represents the type of action recorded in the audit log
enum AuditAction {
  option (gogoproto.goproto_enum_prefix) = false;

  // AUDIT_ACTION_UNSPECIFIED represents an unspecified action
  AUDIT_ACTION_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "AuditActionUnspecified"];

  // AUDIT_ACTION_SUBMITTED indicates report was submitted
  AUDIT_ACTION_SUBMITTED = 1 [(gogoproto.enumvalue_customname) = "AuditActionSubmitted"];

  // AUDIT_ACTION_ASSIGNED indicates report was assigned to moderator
  AUDIT_ACTION_ASSIGNED = 2 [(gogoproto.enumvalue_customname) = "AuditActionAssigned"];

  // AUDIT_ACTION_STATUS_CHANGED indicates status was changed
  AUDIT_ACTION_STATUS_CHANGED = 3 [(gogoproto.enumvalue_customname) = "AuditActionStatusChanged"];

  // AUDIT_ACTION_EVIDENCE_VIEWED indicates evidence was viewed by moderator
  AUDIT_ACTION_EVIDENCE_VIEWED = 4 [(gogoproto.enumvalue_customname) = "AuditActionEvidenceViewed"];

  // AUDIT_ACTION_RESOLVED indicates report was resolved
  AUDIT_ACTION_RESOLVED = 5 [(gogoproto.enumvalue_customname) = "AuditActionResolved"];

  // AUDIT_ACTION_REJECTED indicates report was rejected
  AUDIT_ACTION_REJECTED = 6 [(gogoproto.enumvalue_customname) = "AuditActionRejected"];

  // AUDIT_ACTION_ESCALATED indicates report was escalated
  AUDIT_ACTION_ESCALATED = 7 [(gogoproto.enumvalue_customname) = "AuditActionEscalated"];

  // AUDIT_ACTION_COMMENT_ADDED indicates a comment was added
  AUDIT_ACTION_COMMENT_ADDED = 8 [(gogoproto.enumvalue_customname) = "AuditActionCommentAdded"];
}

// EncryptedEvidence holds encrypted evidence for a fraud report
message EncryptedEvidence {
  option (gogoproto.equal) = true;

  // AlgorithmID identifies the encryption algorithm used
  string algorithm_id = 1 [
    (gogoproto.jsontag) = "algorithm_id",
    (gogoproto.moretags) = "yaml:\"algorithm_id\""
  ];

  // RecipientKeyIDs are the fingerprints of moderator public keys
  repeated string recipient_key_ids = 2 [
    (gogoproto.jsontag) = "recipient_key_ids",
    (gogoproto.moretags) = "yaml:\"recipient_key_ids\""
  ];

  // EncryptedKeys contains the data encryption key encrypted for each recipient
  repeated bytes encrypted_keys = 3 [
    (gogoproto.jsontag) = "encrypted_keys,omitempty",
    (gogoproto.moretags) = "yaml:\"encrypted_keys\""
  ];

  // Nonce is the initialization vector for encryption
  bytes nonce = 4 [
    (gogoproto.jsontag) = "nonce",
    (gogoproto.moretags) = "yaml:\"nonce\""
  ];

  // Ciphertext is the encrypted evidence data
  bytes ciphertext = 5 [
    (gogoproto.jsontag) = "ciphertext",
    (gogoproto.moretags) = "yaml:\"ciphertext\""
  ];

  // SenderSignature is the signature for authenticity verification
  bytes sender_signature = 6 [
    (gogoproto.jsontag) = "sender_signature",
    (gogoproto.moretags) = "yaml:\"sender_signature\""
  ];

  // SenderPubKey is the sender's public key
  bytes sender_pub_key = 7 [
    (gogoproto.jsontag) = "sender_pub_key",
    (gogoproto.moretags) = "yaml:\"sender_pub_key\""
  ];

  // ContentType indicates the type of evidence (e.g., "image/png", "application/json")
  string content_type = 8 [
    (gogoproto.jsontag) = "content_type",
    (gogoproto.moretags) = "yaml:\"content_type\""
  ];

  // EvidenceHash is SHA256 hash of the original evidence for integrity verification
  string evidence_hash = 9 [
    (gogoproto.jsontag) = "evidence_hash",
    (gogoproto.moretags) = "yaml:\"evidence_hash\""
  ];
}

// FraudReport represents a fraud report submitted by a provider
message FraudReport {
  option (gogoproto.equal) = true;

  // ID is the unique identifier for this report
  string id = 1 [
    (gogoproto.jsontag) = "id",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  // Reporter is the provider address who submitted the report
  string reporter = 2 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "reporter",
    (gogoproto.moretags) = "yaml:\"reporter\""
  ];

  // ReportedParty is the address of the party being reported
  string reported_party = 3 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "reported_party",
    (gogoproto.moretags) = "yaml:\"reported_party\""
  ];

  // Category is the type of fraud being reported
  FraudCategory category = 4 [
    (gogoproto.jsontag) = "category",
    (gogoproto.moretags) = "yaml:\"category\""
  ];

  // Description is the detailed description of the fraud
  string description = 5 [
    (gogoproto.jsontag) = "description",
    (gogoproto.moretags) = "yaml:\"description\""
  ];

  // Evidence contains the encrypted evidence attachments
  repeated EncryptedEvidence evidence = 6 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "evidence",
    (gogoproto.moretags) = "yaml:\"evidence\""
  ];

  // Status is the current status of the report
  FraudReportStatus status = 7 [
    (gogoproto.jsontag) = "status",
    (gogoproto.moretags) = "yaml:\"status\""
  ];

  // AssignedModerator is the moderator assigned to review this report
  string assigned_moderator = 8 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "assigned_moderator,omitempty",
    (gogoproto.moretags) = "yaml:\"assigned_moderator\""
  ];

  // Resolution is the resolution type if resolved
  ResolutionType resolution = 9 [
    (gogoproto.jsontag) = "resolution,omitempty",
    (gogoproto.moretags) = "yaml:\"resolution\""
  ];

  // ResolutionNotes are notes provided by the moderator upon resolution
  string resolution_notes = 10 [
    (gogoproto.jsontag) = "resolution_notes,omitempty",
    (gogoproto.moretags) = "yaml:\"resolution_notes\""
  ];

  // SubmittedAt is when the report was submitted
  google.protobuf.Timestamp submitted_at = 11 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "submitted_at",
    (gogoproto.moretags) = "yaml:\"submitted_at\""
  ];

  // UpdatedAt is when the report was last updated
  google.protobuf.Timestamp updated_at = 12 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "updated_at",
    (gogoproto.moretags) = "yaml:\"updated_at\""
  ];

  // ResolvedAt is when the report was resolved (if applicable)
  google.protobuf.Timestamp resolved_at = 13 [
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "resolved_at,omitempty",
    (gogoproto.moretags) = "yaml:\"resolved_at\""
  ];

  // BlockHeight is the block height when submitted
  int64 block_height = 14 [
    (gogoproto.jsontag) = "block_height",
    (gogoproto.moretags) = "yaml:\"block_height\""
  ];

  // ContentHash is SHA256 hash of the report content for integrity
  string content_hash = 15 [
    (gogoproto.jsontag) = "content_hash",
    (gogoproto.moretags) = "yaml:\"content_hash\""
  ];

  // RelatedOrderIDs are order IDs related to this fraud report
  repeated string related_order_ids = 16 [
    (gogoproto.jsontag) = "related_order_ids,omitempty",
    (gogoproto.moretags) = "yaml:\"related_order_ids\""
  ];
}

// FraudAuditLog represents an audit log entry for a fraud report
message FraudAuditLog {
  option (gogoproto.equal) = true;

  // ID is the unique identifier for this log entry
  string id = 1 [
    (gogoproto.jsontag) = "id",
    (gogoproto.moretags) = "yaml:\"id\""
  ];

  // ReportID is the associated fraud report ID
  string report_id = 2 [
    (gogoproto.jsontag) = "report_id",
    (gogoproto.moretags) = "yaml:\"report_id\""
  ];

  // Action is the type of action performed
  AuditAction action = 3 [
    (gogoproto.jsontag) = "action",
    (gogoproto.moretags) = "yaml:\"action\""
  ];

  // Actor is the address that performed the action
  string actor = 4 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "actor",
    (gogoproto.moretags) = "yaml:\"actor\""
  ];

  // PreviousStatus is the status before the action (if applicable)
  FraudReportStatus previous_status = 5 [
    (gogoproto.jsontag) = "previous_status,omitempty",
    (gogoproto.moretags) = "yaml:\"previous_status\""
  ];

  // NewStatus is the status after the action (if applicable)
  FraudReportStatus new_status = 6 [
    (gogoproto.jsontag) = "new_status,omitempty",
    (gogoproto.moretags) = "yaml:\"new_status\""
  ];

  // Details contains additional action-specific details
  string details = 7 [
    (gogoproto.jsontag) = "details,omitempty",
    (gogoproto.moretags) = "yaml:\"details\""
  ];

  // Timestamp is when the action was performed
  google.protobuf.Timestamp timestamp = 8 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "timestamp",
    (gogoproto.moretags) = "yaml:\"timestamp\""
  ];

  // BlockHeight is the block height when the action occurred
  int64 block_height = 9 [
    (gogoproto.jsontag) = "block_height",
    (gogoproto.moretags) = "yaml:\"block_height\""
  ];

  // TxHash is the transaction hash (if applicable)
  string tx_hash = 10 [
    (gogoproto.jsontag) = "tx_hash,omitempty",
    (gogoproto.moretags) = "yaml:\"tx_hash\""
  ];
}

// ModeratorQueueEntry represents an entry in the moderator queue
message ModeratorQueueEntry {
  option (gogoproto.equal) = true;

  // ReportID is the fraud report ID
  string report_id = 1 [
    (gogoproto.jsontag) = "report_id",
    (gogoproto.moretags) = "yaml:\"report_id\""
  ];

  // Priority is the queue priority (higher = more urgent)
  uint32 priority = 2 [
    (gogoproto.jsontag) = "priority",
    (gogoproto.moretags) = "yaml:\"priority\""
  ];

  // QueuedAt is when the report was added to the queue
  google.protobuf.Timestamp queued_at = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.jsontag) = "queued_at",
    (gogoproto.moretags) = "yaml:\"queued_at\""
  ];

  // Category is the fraud category for routing
  FraudCategory category = 4 [
    (gogoproto.jsontag) = "category",
    (gogoproto.moretags) = "yaml:\"category\""
  ];

  // AssignedTo is the moderator assigned (empty if unassigned)
  string assigned_to = 5 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "assigned_to,omitempty",
    (gogoproto.moretags) = "yaml:\"assigned_to\""
  ];
}
